# altairx-vm

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
altairx_v2/core/: core.cpp  core.hpp  opcode.cpp  opcode.hpp  utilities.hpp
altairx_v2/gui/: CMakeLists.txt
altairx_v2/tests/: main.cpp
core/: CMakeLists.txt  core.cpp  core.hpp  io.cpp  make_opcode.hpp  memory.cpp  memory.hpp  opcode.cpp  opcode.hpp  panic.hpp  syscall.cpp  utilities.hpp
elf/: CMakeLists.txt  elf.cpp  elf.hpp  elf_loader.cpp  elf_loader.hpp
gui/: CMakeLists.txt  altairx_gui.cpp  altairx_gui.hpp
guiv3/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
guiv3/tests/: CMakeLists.txt  test_runner.cpp
guiv3/vm/: runner.cpp  runner.hpp
guiv3/widgets/: callstackview.cpp  callstackview.hpp  callstackview.ui  memoryview.cpp  memoryview.hpp  memoryview.ui  registersview.cpp  registersview.hpp  registersview.ui
tests/: CMakeLists.txt  main.cpp
vm/: CMakeLists.txt  altairx.cpp  altairx.hpp  main.cpp
